--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -1,22 +1,28 @@
+# Continous Integration GitHub Actions script for Skork-Framework
 name: Skork CI Builder/Test Runner
 
 on: 
   push:
     branches:
-      - master
+      - develop
+    branches-ignore:
+      - 'feature/**'
+      - 'bugfix/**'
+    paths:
+      - '**.cs'
+    paths-ignore:
+    - 'docs/**'
 
 jobs:
   build:
-
     runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-
+      strategy:
+        matrix:
+          os: [ubuntu-latest, windows-latest, macOS-latest]
     steps:
-    - uses: actions/checkout@v1
-    - name: Setting up Skork CI
-      uses: actions/setup-dotnet@v1
+      - uses: actions/checkout@v1
+      - name: Setting up Skork CI
+    uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.100
     - name: Building using SkorkAPI.sln with CI configuration
