--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -10,19 +10,20 @@ on:
       - 'bugfix/**'
     paths:
       - '**.cs'
-    paths-ignore:
-    - 'docs/**'
+      - '!docs/**'
 
 jobs:
   build:
+    
     runs-on: ${{ matrix.os }}
-      strategy:
+    strategy:
         matrix:
           os: [ubuntu-latest, windows-latest, macOS-latest]
+
     steps:
-      - uses: actions/checkout@v1
-      - name: Setting up Skork CI
-    uses: actions/setup-dotnet@v1
+    - uses: actions/checkout@v1
+    - name: Setting up Skork CI
+      uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.100
     - name: Building using SkorkAPI.sln with CI configuration
